--- a/Destapa-Cañerias/Destapador-De-Baño.html
+++ b/Destapa-Cañerias/Destapador-De-Baño.html
@@ -142,27 +142,27 @@ Destapador De Baño
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapar-Cañeria-Cocina.html">Destapar Cañeria Cocina </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Cloacas-Precios.html">Destapaciones De Cloacas Precios </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Remedio-casero-para-destapar-cañerias.html">Remedio casero para destapar cañerias </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-sin-ventosa.html">Como destapar un inodoro sin ventosa </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacañerias-ayudin-opiniones.html">Destapacañerias ayudin opiniones </a> 
+       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-burzaco.html">Destapa cañerias zona sur burzaco </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapador-de-cañerias-sodimac.html">Destapador de cañerias sodimac </a> 
+       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Destapacaños-manual-precio.html">Destapacaños manual precio </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-24-Hs.html">Destapaciones 24 Hs </a> 
          </li>
 <!--EndPostsList-->
 
@@ -225,42 +225,42 @@ Destapador De Baño
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquinas-Cloacas.html">Destapaciones Con Maquinas Cloacas </a> 
+       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Remedio-casero-para-destapar-tuberias.html">Remedio casero para destapar tuberias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Emergencias-24hs.html">Destapaciones Emergencias 24hs </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-viejas.html">Remedios caseros para destapar cañerias viejas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-lanus.html">Destapa cañerias zona sur lanus </a> 
+       <a href="../Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Harpic-destapacaños-inodoro.html">Harpic destapacaños inodoro </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Que-son-los-mapas-estelares.html">Que son los mapas estelares </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-miramar.html">Destapaciones de cloacas miramar </a> 
+       <a href="../Servicios/Destapador-de-cañerias-casero.html">Destapador de cañerias casero </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Plomero-para-destapar-cañerias.html">Plomero para destapar cañerias </a> 
+       <a href="../Servicios/Bomba-destapacaños-manual.html">Bomba destapacaños manual </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -270,12 +270,12 @@ Destapador De Baño
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-A-Domicilio.html">Destapaciones A Domicilio </a> 
+       <a href="../Destapa-Cañerias/Bomba-destapacaños-home-depot.html">Bomba destapacaños home depot </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Alcohol-boricado-como-se-usa.html">Alcohol boricado como se usa </a> 
+       <a href="../Servicios/Destapaciones-De-Cañerias-en-Palermo.html">Destapaciones De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
